<resources>
    <string name="app_name">MAD</string>
    <string name="Log_in">Log in</string>
    <string name="Register">Register</string>
    <string name="Register_pg">Register_pg</string>
    <string name="Register_r">Register</string>
    <string name="Name">Name</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="enter_name">Enter your Name</string>
    <string name="reg_mobi">Enter your mobile number</string>
    <string name="reg_email">Enter your Email address</string>
    <string name="reg_pass">Enter your password</string>
    <string name="Login_pg">Login</string>
    <string name="already_acc">Already have an Account ?</string>
    <string name="fgt_pass">Forgot Password</string>
    <string name="nw_user_reg">New User? Register Now</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="address">Address</string>
    <string name="post_code">Postal Code</string>
    <string name="edt_prof">Edit Profile</string>
    <string name="dlt_prof">Delete Profile</string>
    <string name="update_prof">Update Profile</string>
    <string name="welcome">Welcome</string>
    <string name="loginwith">Login with</string>
    <string name="signupWith">Signup with</string>
    <string name="already_reg">Already Registered ? Login Now</string>
    <string name="Log_out">Log Out</string>
    <string name="Not_available">Not Available</string>
    <string name="dashWelcome">Welcome Pasindu,</string>
    <string name="dashtext">Start a new journey in agriculture</string>
    <string name="welcome_dash">Welcome</string>
    <string name="userDash">User</string>
</resources>