<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="@dimen/main_logo_width"
                android:layout_height="@dimen/main_logo_height"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/applogo"
                tools:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome"
                android:textColor="#0d6e6a"
                android:textSize="45dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create a new account"
                android:textColor="#0d6e6a"
                android:textStyle="bold"
                android:textSize="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btns_height"
                android:layout_marginTop="@dimen/main_btn_marginTop"
                android:background="@drawable/home_login_button"
                android:text="@string/Login_pg"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btns_height"
                android:layout_marginTop="@dimen/main_btn_marginTop"
                android:layout_marginBottom="50dp"
                android:background="@drawable/home_register_button"
                android:text="@string/Register"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>




