<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginNew">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <View
                            android:id="@+id/topView"
                            android:layout_width="@dimen/login_top_width"
                            android:layout_height="@dimen/loginTop_height"
                            android:background="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:background="@drawable/wave_login"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/topView" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/person_login" />

                        <TextView
                            android:id="@+id/topText"
                            android:layout_width="243dp"
                            android:layout_height="72dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="40dp"
                            android:text="@string/already_acc"
                            android:textColor="@android:color/white"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/imageView2"
                            app:layout_constraintHorizontal_bias="0.1"
                            app:layout_constraintStart_toStartOf="@+id/topView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/loginInputEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="32dp"
                            android:background="@drawable/round_border"
                            android:drawableStart="@drawable/email_login"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="@string/Email"
                            android:inputType="text"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/view2" />

                        <EditText
                            android:id="@+id/inputPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="32dp"
                            android:background="@drawable/round_border"
                            android:drawableStart="@drawable/lock_login"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/loginInputEmail" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnLogin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/login_layout_margin"
                            android:layout_marginTop="@dimen/login_margin_top"
                            android:layout_marginEnd="@dimen/login_margin_end"
                            android:background="@drawable/round_bg"
                            android:text="@string/Login_pg"
                            android:textColor="@color/white"
                            android:textSize="@dimen/login_text_size"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="OR"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.501"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                        <TextView
                            android:id="@+id/forgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="32dp"
                            android:text="@string/fgt_pass"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.504"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3">

                                <ImageView
                                    android:id="@+id/googleLogin"
                                    android:layout_width="92dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/google_img" />

                                <ImageView
                                    android:id="@+id/fbLogin"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@mipmap/fb_new_logo_foreground" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/goToRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="32dp"
                            android:text="@string/nw_user_reg"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="37dp"
                            android:layout_height="29dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/arrow_back" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>